[package]
name = "quasar"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]

[dependencies]
rustc-serialize = "0.3.18"
mustache = { version = "0.8.0", optional = true }
owning_ref = "0.2"

[dependencies.webplatform]
git = "https://github.com/anowell/rust-webplatform.git"

[features]
default = ["mustache"]
