[package]
name = "quasar"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]
description = "An experimental rust-to-{wasm,asmjs} frontend framework."
repository = "https://github.com/anowell/quasar"

[dependencies]
rustc-serialize = "0.3.18"
downcast-rs = "0.1.2"
mustache = { version = "0.8.0", optional = true }

[dependencies.webplatform]
git = "https://github.com/anowell/rust-webplatform.git"

[features]
default = ["mustache"]
