[package]
name = "quasar-www"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]

[dependencies]
rustc-serialize = "0.3.18"
maud = { version = "0.16.2", optional = true }
maud_macros = { version = "0.16.2", optional = true }

[dependencies.bart]
git = "https://github.com/maghoff/bart"

[dependencies.bart_derive]
git = "https://github.com/maghoff/bart"

[dependencies.quasar]
version = "*"
path = ".."


[features]
default = []
with-maud = ["maud", "maud_macros"]
